@startuml
'https://plantuml.com/class-diagram
hide circle
class PlansRepository <<interface>>
class CrudRepository <<interface>>

title Class Diagram / As a new customer I want to know all existing plans

class Plans{
    -name
    - description
    - numberOfMinutes
    -maximumNumberOfUsers
    -musicCollection
     -musicSuggestion
     -annualFee
     -monthlyFee
     -active
     -promoted
}

class PlansController{
    +findAll() :Iterable<PlansView>
    }
class PlansService{
 +findAll() :Iterable<Plans>

}

interface PlansRepository extends CrudRepository
{

}

interface CrudRepository
{
+Iterable<T> findAll()
}

PlansController ..> PlansService: uses>
PlansController ..> Plans
PlansService ..> PlansRepository: uses>
PlansRepository ..> Plans: records>

@enduml